k8s/cost-optimization.yaml
# -----------------------------------------------------------------------------
# 8. Node Affinity for Spot Instances
# -----------------------------------------------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trm-app-spot
  namespace: trm
  labels:
    app.kubernetes.io/name: trm
    app.kubernetes.io/component: app
    workload: spot
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: trm
      workload: spot
  template:
    metadata:
      labels:
        app.kubernetes.io/name: trm
        workload: spot
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node.kubernetes.io/capacity-type
                    operator: In
                    values:
                      - spot
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - trm
                topologyKey: kubernetes.io/hostname
      tolerations:
        - key: spot
          operator: Equal
          value: "true"
          effect: NoSchedule
      containers:
        - name: trm-app
          image: ghcr.io/trm/trm-app:latest
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi

---
# -----------------------------------------------------------------------------
# 10. AWS Node Termination Handler for Spot Instances
# -----------------------------------------------------------------------------
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: aws-node-termination-handler
  namespace: kube-system
  labels:
    app.kubernetes.io/name: aws-node-termination-handler
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: aws-node-termination-handler
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aws-node-termination-handler
    spec:
      serviceAccountName: aws-node-termination-handler
      containers:
        - name: node-termination-handler
          image: public.ecr.aws/aws-ec2/aws-node-termination-handler:v1.20.0
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
---
# -----------------------------------------------------------------------------
# Installation Instructions:
# -----------------------------------------------------------------------------
# 1. Install KEDA:
#    helm repo add kedacore https://kedacore.github.io/charts
#    helm repo update
#    helm install keda kedacore/keda --namespace keda --create-namespace
#
# 2. Install Vertical Pod Autoscaler:
#    kubectl apply -f https://github.com/kubernetes/autoscaler/releases/download/vertical-pod-autoscaler-0.14.0/vpa-v1-crd-gen.yaml
#    kubectl apply -f https://github.com/kubernetes/autoscaler/releases/download/vertical-pod-autoscaler-0.14.0/vpa-rbac.yaml
#    kubectl apply -f https://github.com/kubernetes/autoscaler/releases/download/vertical-pod-autoscaler-0.14.0/vpa-updater-deployment.yaml
#
# 3. Install AWS Node Termination Handler:
#    helm repo add eks https://aws.github.io/eks-charts
#    helm install aws-node-termination-handler eks/aws-node-termination-handler \
#      --namespace kube-system \
#      --set enableSpotInterruptionDraining=true \
#      --set enableRebalanceMonitoring=true
#
# 4. Apply cost optimization policies:
#    kubectl apply -f k8s/cost-optimization.yaml
#
# 5. Verify KEDA is working:
#    kubectl get scaledobjects -n trm
#    kubectl describe scaledobject trm-app-scaler -n trm
# -----------------------------------------------------------------------------
